--- a/_layout/safe_form.html
+++ b/_layout/safe_form.html
@@ -1,6 +1,6 @@
 <form method="post" action="">
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
+        <label for="exampleInputPassword1">Password To The Safe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
