--- a/_layout/safe_form.html
+++ b/_layout/safe_form.html
@@ -1,4 +1,4 @@
-<form method="post" action="">
+<form method="post" action="_action/login.php">
     <div class="form-group">
         <label for="exampleInputPassword1">Password To The Safe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
