--- a/_layout/safe_form.html
+++ b/_layout/safe_form.html
@@ -1,7 +1,7 @@
 <form method="post" action="index.php?action=login">
     <div class="form-group">
         <label for="exampleInputPassword1">Password To The Safe</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" name="pin" class="form-control" id="exampleInputPassword1" placeholder="Password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
