--- a/_layout/safe_form.html
+++ b/_layout/safe_form.html
@@ -1,12 +1,7 @@
 <form method="post" action="index.php?action=login">
     <div class="form-group">
-<<<<<<< HEAD
         <label for="answer">Answer:</label>
-        <input type="text" name="password" id="answer" class="form-control" placeholder="Answer" aria-label="Answer">
-=======
-        <label for="exampleInputPassword1">Password To The Safe</label>
-        <input type="password" name="pin" class="form-control" id="exampleInputPassword1" placeholder="Password">
->>>>>>> bdc3482e82b2fe9bab6a95c12ba231a83f5f2ba6
+        <input type="text" name="answer" id="answer" class="form-control" placeholder="Answer" aria-label="Answer">
     </div>
     <button type="submit" class="btn try">Try Yourself</button>
 </form>
